re-rename back to -y suffix

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@
 ####                                                                                             ###
 ####################################################################################################
 [versions]
-kish-library = "0.0.1"
+kty-library = "0.0.1"
 
 ####################################################################################################
 ######################################   Language & Compiler   #####################################
