--- a/.github/workflows/job-unit-tests.yml
+++ b/.github/workflows/job-unit-tests.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           name: Unit-Test-Reports
           path: |
-            **/build/reports/test-results/test/*.xml
+            **/build/test-results/test/
 
       - name: Create Test Report
         uses: dorny/test-reporter@v2
@@ -38,4 +38,4 @@ jobs:
           name: Unit Test Report
           reporter: java-junit
           path: |
-            **/build/reports/test-results/test/*.xml
+            **/build/test-results/test/*.xml
