--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,8 +15,9 @@ updates:
     # Groups to prevent overwhelming the team with PRs.
     groups:
       # Group all updates together, may be merged when CI is green.
-      patch-updates:
-        update-types: ["*"]
+      gradle-updates:
+        patterns:
+          - "*"
 
     # Each pull request rebase/merge runs all checks again, which may be costly.
     rebase-strategy: "auto"
