--- a/.github/workflows/auto_assign_action.yml
+++ b/.github/workflows/auto_assign_action.yml
@@ -6,5 +6,9 @@ on:
 jobs:
   auto-assign:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: toshimaru/auto-author-assign@v2.1.1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
