--- a/.github/workflows/job-unit-tests.yml
+++ b/.github/workflows/job-unit-tests.yml
@@ -1,7 +1,7 @@
 name: Unit Tests
 
 on:
-  pull_request:
+  workflow_call:
 
 jobs:
   unit-test-job:
@@ -10,21 +10,15 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set-up JDK
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: 'gradle'
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Unit tests
-        run: bash ./gradlew test
+        run: ./gradlew check
 
       - name: Upload Reports
-        if: ${{ always() }}
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: Unit-Test-Reports
           path: |
