--- a/.github/workflows/job-unit-tests.yml
+++ b/.github/workflows/job-unit-tests.yml
@@ -10,6 +10,13 @@ jobs:
     timeout-minutes: 10
 
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+
+      # Setup Gradle takes care of gradle caching & dependency graph reporting
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
