--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -8,7 +8,8 @@ permissions:
   pull-requests: write
 
 jobs:
-  gradle:
+  build:
+    name: Gradle Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -24,7 +25,7 @@ jobs:
           add-job-summary-as-pr-comment: on-failure # Valid values are 'never' (default), 'always', and 'on-failure'
 
       - name: Execute Gradle build
-        run: ./gradlew build --scan
+        run: ./gradlew build
 
   unit-tests:
     name: Unit Tests
@@ -32,7 +33,7 @@ jobs:
 
   automerge-dependabot-job:
     name: Automerge Dependabot
-    needs: [ unit-tests ] # After these jobs: if one of them fails, it won't merge the PR.
+    needs: [ build, unit-tests ] # After these jobs: if one of them fails, it won't merge the PR.
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request'}} # Detect that the PR author is dependabot
     steps:
