--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,7 @@ kotlin-language = "2.1.20"
 ####################################################################################################
 #######################################   Library Versions   #######################################
 ####################################################################################################
+dokka = "2.0.0"
 junit5 = "5.12.1"
 kotest = "5.9.1"
 mockk = "1.13.17"
@@ -41,6 +42,7 @@ mockk = "1.13.17"
 ####################################################################################################
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin-language" }
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 
 ####################################################################################################
 ####                                                                                             ###
