--- a/gradle.properties
+++ b/gradle.properties
@@ -42,3 +42,7 @@ org.gradle.parallel=true
 # When configured, Gradle will use a maximum of the given number
 # of workers. (Default is the number of CPU processors).
 # org.gradle.workers.max=(max # of worker processes)
+
+# Dokka V2
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
