--- a/.github/workflows/assign-author.yml
+++ b/.github/workflows/assign-author.yml
@@ -1,13 +1,9 @@
-name: Auto Author Assign
+name: Assign Author
 
 on:
-  issues:
-    types: [ opened, reopened ]
-  pull_request_target:
-    types: [ opened, reopened ]
+  workflow_call: # Allows this workflow to be called from other workflows.
 
 permissions:
-  issues: write
   pull-requests: write
 
 jobs:
